<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">


    <android.support.constraint.ConstraintLayout
        android:id="@+id/miffin_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:visibility="invisible">

        <TableLayout
            android:id="@+id/tableLayout"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:id="@+id/textView2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:text="@string/text_miffin" />
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent">


                <RadioGroup
                    android:layout_width="393dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:orientation="vertical">

                    <RadioButton
                        android:id="@+id/radio_male"
                        android:layout_width="127dp"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal"
                        android:checked="true"
                        android:text="@string/gender_1" />


                    <RadioButton
                        android:id="@+id/radio_female"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal"

                        android:text="@string/gender_2" />

                </RadioGroup>
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:id="@+id/text_height_2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:text="@string/text_height" />
            </TableRow>

            <TableRow
                android:layout_width="match_parent"

                android:layout_height="match_parent">

                <EditText
                    android:id="@+id/height_2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:ems="5"
                    android:inputType="numberDecimal" />
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:id="@+id/text_mass_2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:text="@string/text_mass" />
            </TableRow>

            <TableRow
                android:layout_width="match_parent"

                android:layout_height="match_parent">

                <EditText
                    android:id="@+id/mass2"
                    android:layout_width="115dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:ems="3"
                    android:inputType="numberDecimal" />
            </TableRow>

            <TableRow
                android:layout_width="match_parent"

                android:layout_height="match_parent">

                <TextView
                    android:id="@+id/text_age"
                    android:layout_width="95dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:text="@string/text_age" />

            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <EditText
                    android:id="@+id/age"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:ems="3"
                    android:inputType="number" />
            </TableRow>

            <TableRow
                android:layout_width="match_parent"

                android:layout_height="match_parent">

                <Button
                    android:id="@+id/miffin"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:text="@string/text_button" />
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:id="@+id/text_miffin_result"
                    android:layout_width="384dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:paddingLeft="12dp"
                    android:paddingRight="12dp"
                    android:text="@string/text_miffin_result"
                    android:textSize="24sp" />

            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="64dp">

                <TextView
                    android:id="@+id/miffin_result"
                    android:layout_width="46dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:textSize="30sp" />

            </TableRow>

        </TableLayout>

    </android.support.constraint.ConstraintLayout>

    <android.support.constraint.ConstraintLayout
        android:id="@+id/home_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:visibility="invisible">

        <TextView
            android:id="@+id/text_home"
            android:layout_width="412dp"
            android:layout_height="158dp"
            android:text="@string/text_home"
            android:textAlignment="center"
            android:textSize="36sp"
            android:textStyle="bold|italic"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </android.support.constraint.ConstraintLayout>

    <android.support.constraint.ConstraintLayout
        android:id="@+id/bmi_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:visibility="invisible">

        <LinearLayout
            android:layout_width="411dp"
            android:layout_height="672dp"
            android:orientation="vertical"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:visibility="invisible">

            <TextView
                android:id="@+id/text_height"
                android:layout_width="423dp"
                android:layout_height="wrap_content"
                android:text="@string/text_height"
                android:textAlignment="center"
                android:textSize="36sp" />

            <EditText
                android:id="@+id/height"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/height_hint"
                android:inputType="numberDecimal"
                android:textAlignment="center" />

            <TextView
                android:id="@+id/text_mass"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/text_mass"
                android:textAlignment="center"
                android:textSize="36sp" />

            <EditText
                android:id="@+id/mass"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/mass_hint"
                android:inputType="numberDecimal"
                android:textAlignment="center" />

            <Button
                android:id="@+id/calculate"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/text_button" />

            <TextView
                android:id="@+id/textbmi"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/text_bmi"
                android:textAlignment="center"
                android:textSize="30sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/bmiresult"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAlignment="center"
                android:textSize="36sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/bmiclass"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAlignment="center"
                android:textSize="24sp"
                android:textStyle="bold" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/imageView"
                    android:layout_width="match_parent"
                    android:layout_height="176dp"
                    android:contentDescription="@string/img"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:srcCompat="@drawable/salad" />
            </LinearLayout>

        </LinearLayout>
    </android.support.constraint.ConstraintLayout>


    <android.support.constraint.ConstraintLayout
        android:id="@+id/chart_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:visibility="invisible">

        <WebView
            android:id="@+id/webview"
            android:layout_width="398dp"
            android:layout_height="624dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </android.support.constraint.ConstraintLayout>

    <android.support.constraint.ConstraintLayout
        android:id="@+id/quiz_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:visibility="visible">


        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:id="@+id/quiz_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/text_quiz"
                    android:textAlignment="center" />
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="381dp">

                <TextView
                    android:id="@+id/question"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/question_1"
                    android:textSize="36sp" />
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <Button
                    android:id="@+id/answer_1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/answer_1_good" />
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <Button
                    android:id="@+id/answer_2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/answer_1_bad_1" />
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent" >

                <Button
                    android:id="@+id/answer_3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/answer_1_bad_2" />
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent" >

                <Button
                    android:id="@+id/answer_4"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/answer_1_bad_3" />
            </TableRow>
            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:id="@+id/quiz_result"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/text_quiz"
                    android:visibility="invisible"
                    android:textAlignment="center" />
            </TableRow>
            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent" >

                <Button
                    android:id="@+id/button_restart"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/restart" />
            </TableRow>
        </TableLayout>
    </android.support.constraint.ConstraintLayout>

    <android.support.design.widget.BottomNavigationView
        android:id="@+id/nav_view"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="0dp"
        android:layout_marginEnd="0dp"
        android:background="?android:attr/windowBackground"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:menu="@menu/bottom_nav_menu" >

    </android.support.design.widget.BottomNavigationView>


</android.support.constraint.ConstraintLayout>